PlaysResource.mageKnightSoloPlays now returns 2 Tables with statistics: 1 for Mage Knight and 1 for Dummy Player